# wavefs

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
CMake/: Findcurl.cmake  Findcurlpp.cmake  Findmongocxx.cmake
src/: file_downloader.cpp  file_downloader.h  main.cpp
src/config/: config.cpp  config.h
src/cypher/: cypher.cpp  cypher.h
src/encode/: base64.cpp
src/repository/: repository.cpp  repository.h
src/rest/: oauth_restclient.cpp  oauth_restclient.h  tidal_client.cpp  tidal_client.h  types.h
src/virtual/: image_directory.cpp  image_directory.h  music_directory.cpp  music_directory.h
src/wavefs/: wavefs.cpp  wavefs.h  wavefs_types.h
